Remove main file

--- a/functions.ipynb
+++ b/functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "id": "524660c5",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "id": "e4082784",
    "metadata": {},
    "outputs": [],
@@ -23,16 +23,24 @@
     "train_images = np.array(train_images)\n",
     "train_labels = np.array(train_labels)\n",
     "test_images = np.array(test_images)\n",
-    "test_labels = np.array(test_labels)\n",
-    "\n",
-    "#FLATTEN\n",
+    "test_labels = np.array(test_labels)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95bb5c47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FLATTEN layer\n",
     "train_images_flat = train_images.reshape(60000, 28*28)\n",
     "test_images_flat = test_images.reshape(10000, 28*28)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "58d587e6",
    "metadata": {},
    "outputs": [],
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "30542217",
    "metadata": {},
    "outputs": [
