--- a/functions.ipynb
+++ b/functions.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "66a7d82c",
+   "metadata": {},
+   "source": [
+    "Importing Library"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "524660c5",
    "metadata": {},
    "outputs": [],
@@ -12,8 +20,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1374fead",
+   "metadata": {},
+   "source": [
+    "Loading Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "e4082784",
    "metadata": {},
    "outputs": [],
@@ -27,8 +43,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2277c232",
+   "metadata": {},
+   "source": [
+    "Flatten Layer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "95bb5c47",
    "metadata": {},
    "outputs": [],
@@ -39,25 +63,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e7b8183",
+   "metadata": {},
+   "source": [
+    "Batch Normalization Layer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "58d587e6",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Chuẩn hóa các dữ liệu đầu vào, nằm giữa các fully connected layer / convo\n",
     "class BatchNorm:\n",
-    "    def __init__(self, hidden_size):\n",
+    "    def __init__(self, hidden_size): #hidden_size = size of data\n",
     "        self.hidden_size = hidden_size\n",
     "        self.x = None\n",
-    "        self.gamma = np.ones((hidden_size, 1)) \n",
-    "        self.beta = np.zeros((hidden_size, 1))\n",
+    "        self.gamma = np.ones((hidden_size, 1))  # initialize gamma = array of 1\n",
+    "        self.beta = np.zeros((hidden_size, 1))  # initialize beta = array of 0\n",
     "\n",
     "    def forward(self, x):\n",
     "        self.x = x\n",
     "        self.mu = np.mean(x, axis = 0)\n",
     "        self.var = np.var(x, axis=0)\n",
-    "        self.x_norm = (x - self.mu) / np.sqrt(self.var + 1e-6) #constant = 1e-6\n",
+    "        self.x_norm = (x - self.mu) / np.sqrt(self.var + 1e-6) # constant = 1e-6\n",
     "        out = self.gamma * self.x_norm + self.beta\n",
     "        return out\n",
     "\n",
@@ -71,6 +103,7 @@
     "\n",
     "        # Plot the post-normalized data\n",
     "        plt.hist(post_norm_bins[:-1], post_norm_bins, weights=post_norm_hist, alpha=0.5, label='Post-Normalization')\n",
+    "        \n",
     "        plt.xlabel('Value')\n",
     "        plt.ylabel('Frequency')\n",
     "        plt.title('Pre-Normalization vs. Post-Normalization')\n",
@@ -81,8 +114,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b8e7e687",
+   "metadata": {},
+   "source": [
+    "Testing A Single Batch Normalization Layer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "30542217",
    "metadata": {},
    "outputs": [
@@ -104,6 +145,26 @@
     "\n",
     "# Now, call the visualization methods\n",
     "bn_layer.plot_batch_norm()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2187116f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (4177162961.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Dropout:\n",
+    "    "
    ]
   }
  ],
