--- a/functions.ipynb
+++ b/functions.ipynb
@@ -29,17 +29,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "e4082784",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 28, 28)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from tensorflow.keras.datasets import mnist\n",
     "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()\n",
     "train_images = np.array(train_images)\n",
     "train_labels = np.array(train_labels)\n",
     "test_images = np.array(test_images)\n",
-    "test_labels = np.array(test_labels)\n"
+    "test_labels = np.array(test_labels)\n",
+    "\n",
+    "test_images.shape"
    ]
   },
   {
@@ -52,14 +65,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "95bb5c47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000, 784)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#FLATTEN layer\n",
-    "train_images_flat = train_images.reshape(60000, 28*28)\n",
-    "test_images_flat = test_images.reshape(10000, 28*28)"
+    "def Flattening (data):\n",
+    "    return data.reshape(data.shape[0], data.shape[1]*data.shape[2])\n",
+    "train_images_flat = Flattening(train_images)     \n",
+    "train_images_flat.shape"
    ]
   },
   {
