Convolution GD, loss function

--- a/functions.ipynb
+++ b/functions.ipynb
@@ -168,6 +168,27 @@
     "#train_images_flat = Flattening(train_images)     \n",
     "#train_images_flat.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1820aa56",
+   "metadata": {},
+   "source": [
+    "Cross entropy loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6ddccdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cross_entropy_loss(batch, probs, labels):\n",
+    "    # labels one-hot\n",
+    "    loss = -np.sum(labels * np.log(probs + 1e-12)) / batch\n",
+    "    return loss"
+   ]
   }
  ],
  "metadata": {
