--- a/main.ipynb
+++ b/main.ipynb
@@ -82,28 +82,34 @@
     "        X: input image of shape (height, width, channels)\n",
     "        \"\"\"\n",
     "        output = X\n",
-    "        \n",
+    "        print(\"Original: \", output.shape)\n",
+    "\n",
     "        # Convolutional layer\n",
     "        output = self.layers[0].forward(output)  # Convolution: (28, 28, 1) -> (26, 26, 8)\n",
-    "        \n",
+    "        print(\"Conv layer:\", output.shape)\n",
+    "\n",
     "        # ReLU activation\n",
     "        output = self.layers[1].forward(output)  # ReLU\n",
-    "        \n",
+    "        print(\"ReLU layer: \", output.shape)\n",
+    "\n",
     "        # Max pooling\n",
     "        output = self.layers[2].forward(output)  # MaxPooling: (26, 26, 8) -> (13, 13, 8)\n",
-    "        \n",
+    "        print(\"Max pooling\", output.shape)\n",
+    "\n",
     "        # Flatten\n",
     "        output = self.layers[3].forward(output)  # Flatten: (13, 13, 8) -> (1352, 1)\n",
+    "        print(\"Flatten\", output.shape)\n",
     "        \n",
     "        # Fully connected layer 1\n",
     "        output = self.layers[4].forward(output)  # FC1: (1352,) -> (128,)\n",
-    "        \n",
+    "        print(\"Fully 1: \", output.shape)\n",
     "        # ReLU activation\n",
     "        output = np.maximum(0, output)  # ReLU\n",
-    "        \n",
+    "        print(\"ReLU: \", output.shape)\n",
     "        # Dropout layer 1\n",
     "        self.layers[5].forward(output)  # Dropout: (128,)\n",
     "        output = self.layers[5].output  # Apply dropout mask\n",
+    "        print(\"Dropout: \", output.shape)\n",
     "        \n",
     "        # Fully connected layer 2\n",
     "        output = self.layers[6].forward(output)  # FC2: (128,) -> (32,)\n",
@@ -117,6 +123,8 @@
     "        \n",
     "        # Softmax\n",
     "        output = self.layers[8].forward(output)  # Softmax: (32,) -> (10,)\n",
+    "        print(\"Softmax: \", output.shape)\n",
+    "\n",
     "        \n",
     "        return output\n",
     "    \n",
@@ -128,7 +136,8 @@
     "        \"\"\"\n",
     "        # Softmax backward\n",
     "        dY = self.layers[8].backprop(dY, learning_rate)\n",
-    "        \n",
+    "        print(\"Softmax backward\")\n",
+    "\n",
     "        # Dropout layer 2 backward\n",
     "        dY = self.layers[7].backward(dY)\n",
     "        dY = np.maximum(0, dY)  # ReLU backward\n",
@@ -242,24 +251,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "6b808928",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "Exception encountered when calling BatchNorm.call().\n\n\u001b[1min user code:\n\n    File \"d:\\ZB\\Code\\Python\\CNN-from-strach\\Batchnorm.py\", line 65, in call  *\n        self.add_update(mean_update)\n\n    AttributeError: 'BatchNorm' object has no attribute 'add_update'\n\u001b[0m\n\nArguments received by BatchNorm.call():\n  • inputs=tf.Tensor(shape=(8, 26, 26), dtype=float32)\n  • training=True",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original:  (1, 28, 28)\n",
+      "Conv layer: (8, 26, 26)\n",
+      "ReLU layer:  (8, 26, 26)\n",
+      "Max pooling (8, 13, 13)\n",
+      "Flatten (1352,)\n",
+      "Fully 1:  (1, 128)\n",
+      "ReLU:  (1, 128)\n",
+      "Dropout:  (1, 128)\n",
+      "Softmax:  (10,)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence.",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m      2\u001b[39m cnn_model = CNN([\n\u001b[32m      3\u001b[39m     conv_layer,        \u001b[38;5;66;03m# 0: Convolution\u001b[39;00m\n\u001b[32m      4\u001b[39m     relu,              \u001b[38;5;66;03m# 1: ReLU\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     12\u001b[39m     softmax_layer      \u001b[38;5;66;03m# 9: Softmax\u001b[39;00m\n\u001b[32m     13\u001b[39m ])\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Train the model (example with small subset and few epochs for testing)\u001b[39;00m\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m# Uncomment to run:\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m \u001b[43mcnn_model\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_images\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[32;43m100\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_labels\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[32;43m100\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m0.01\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     19\u001b[39m \u001b[38;5;66;03m# Make predictions on test set\u001b[39;00m\n\u001b[32m     20\u001b[39m \u001b[38;5;66;03m# predictions = cnn_model.predict(test_images[:10])\u001b[39;00m\n\u001b[32m     21\u001b[39m \u001b[38;5;66;03m# print(\"Predictions:\", predictions)\u001b[39;00m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 114\u001b[39m, in \u001b[36mCNN.train\u001b[39m\u001b[34m(self, train_images, train_labels, epochs, batch_size, learning_rate)\u001b[39m\n\u001b[32m    111\u001b[39m img_normalized = img_normalized[np.newaxis, :, :]  \u001b[38;5;66;03m# Add channel dimension\u001b[39;00m\n\u001b[32m    113\u001b[39m \u001b[38;5;66;03m# Forward pass\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m114\u001b[39m output = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg_normalized\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    116\u001b[39m \u001b[38;5;66;03m# Compute cross-entropy loss\u001b[39;00m\n\u001b[32m    117\u001b[39m output = np.clip(output, \u001b[32m1e-7\u001b[39m, \u001b[32m1\u001b[39m - \u001b[32m1e-7\u001b[39m)  \u001b[38;5;66;03m# Avoid log(0)\u001b[39;00m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 19\u001b[39m, in \u001b[36mCNN.forward\u001b[39m\u001b[34m(self, X)\u001b[39m\n\u001b[32m     16\u001b[39m output = \u001b[38;5;28mself\u001b[39m.layers[\u001b[32m1\u001b[39m].forward(output)  \u001b[38;5;66;03m# ReLU\u001b[39;00m\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# Batch normalization\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m output = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mlayers\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtraining\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# BatchNorm: (26, 26, 8) -> (26, 26, 8)\u001b[39;00m\n\u001b[32m     21\u001b[39m \u001b[38;5;66;03m# Max pooling\u001b[39;00m\n\u001b[32m     22\u001b[39m output = \u001b[38;5;28mself\u001b[39m.layers[\u001b[32m3\u001b[39m].forward(output)  \u001b[38;5;66;03m# MaxPooling: (26, 26, 8) -> (13, 13, 8)\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\keras\\src\\utils\\traceback_utils.py:122\u001b[39m, in \u001b[36mfilter_traceback.<locals>.error_handler\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m    119\u001b[39m     filtered_tb = _process_traceback_frames(e.__traceback__)\n\u001b[32m    120\u001b[39m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[32m    121\u001b[39m     \u001b[38;5;66;03m# `keras.config.disable_traceback_filtering()`\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m122\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m e.with_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    123\u001b[39m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[32m    124\u001b[39m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mC:\\Users\\ASUSZE~1\\AppData\\Local\\Temp\\__autograph_generated_file0g1dx94u.py:41\u001b[39m, in \u001b[36mouter_factory.<locals>.inner_factory.<locals>.tf__call\u001b[39m\u001b[34m(self, inputs, training)\u001b[39m\n\u001b[32m     39\u001b[39m batch_variance = ag__.Undefined(\u001b[33m'\u001b[39m\u001b[33mbatch_variance\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     40\u001b[39m variance = ag__.Undefined(\u001b[33m'\u001b[39m\u001b[33mvariance\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m41\u001b[39m \u001b[43mag__\u001b[49m\u001b[43m.\u001b[49m\u001b[43mif_stmt\u001b[49m\u001b[43m(\u001b[49m\u001b[43mag__\u001b[49m\u001b[43m.\u001b[49m\u001b[43mld\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtraining\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mif_body\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43melse_body\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mget_state\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mset_state\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mmean\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mvariance\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     42\u001b[39m output = ag__.converted_call(ag__.ld(batch_norm), (ag__.ld(inputs),), \u001b[38;5;28mdict\u001b[39m(moving_mean=ag__.ld(mean), moving_var=ag__.ld(variance), beta=ag__.ld(\u001b[38;5;28mself\u001b[39m).beta, gamma=ag__.ld(\u001b[38;5;28mself\u001b[39m).gamma, eps=\u001b[32m1e-05\u001b[39m), fscope)\n\u001b[32m     43\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mC:\\Users\\ASUSZE~1\\AppData\\Local\\Temp\\__autograph_generated_file0g1dx94u.py:27\u001b[39m, in \u001b[36mouter_factory.<locals>.inner_factory.<locals>.tf__call.<locals>.if_body\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     25\u001b[39m mean_update = ag__.converted_call(ag__.ld(\u001b[38;5;28mself\u001b[39m).assign_moving_average, (ag__.ld(\u001b[38;5;28mself\u001b[39m).moving_mean, ag__.ld(batch_mean)), \u001b[38;5;28;01mNone\u001b[39;00m, fscope)\n\u001b[32m     26\u001b[39m variance_update = ag__.converted_call(ag__.ld(\u001b[38;5;28mself\u001b[39m).assign_moving_average, (ag__.ld(\u001b[38;5;28mself\u001b[39m).moving_variance, ag__.ld(batch_variance)), \u001b[38;5;28;01mNone\u001b[39;00m, fscope)\n\u001b[32m---> \u001b[39m\u001b[32m27\u001b[39m ag__.converted_call(\u001b[43mag__\u001b[49m\u001b[43m.\u001b[49m\u001b[43mld\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43madd_update\u001b[49m, (ag__.ld(mean_update),), \u001b[38;5;28;01mNone\u001b[39;00m, fscope)\n\u001b[32m     28\u001b[39m ag__.converted_call(ag__.ld(\u001b[38;5;28mself\u001b[39m).add_update, (ag__.ld(variance_update),), \u001b[38;5;28;01mNone\u001b[39;00m, fscope)\n\u001b[32m     29\u001b[39m mean, variance = (ag__.ld(batch_mean), ag__.ld(batch_variance))\n",
-      "\u001b[31mAttributeError\u001b[39m: Exception encountered when calling BatchNorm.call().\n\n\u001b[1min user code:\n\n    File \"d:\\ZB\\Code\\Python\\CNN-from-strach\\Batchnorm.py\", line 65, in call  *\n        self.add_update(mean_update)\n\n    AttributeError: 'BatchNorm' object has no attribute 'add_update'\n\u001b[0m\n\nArguments received by BatchNorm.call():\n  • inputs=tf.Tensor(shape=(8, 26, 26), dtype=float32)\n  • training=True"
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[31mTypeError\u001b[39m: only length-1 arrays can be converted to Python scalars",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m      2\u001b[39m cnn_model = CNN([\n\u001b[32m      3\u001b[39m     conv_layer,        \u001b[38;5;66;03m# 0: Convolution\u001b[39;00m\n\u001b[32m      4\u001b[39m     relu,              \u001b[38;5;66;03m# 1: ReLU\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     11\u001b[39m     softmax_layer      \u001b[38;5;66;03m# 9: Softmax\u001b[39;00m\n\u001b[32m     12\u001b[39m ])\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# Train the model (example with small subset and few epochs for testing)\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Uncomment to run:\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m \u001b[43mcnn_model\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_images\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[32;43m100\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_labels\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[32;43m100\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m0.01\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# Make predictions on test set\u001b[39;00m\n\u001b[32m     19\u001b[39m \u001b[38;5;66;03m# predictions = cnn_model.predict(test_images[:10])\u001b[39;00m\n\u001b[32m     20\u001b[39m \u001b[38;5;66;03m# print(\"Predictions:\", predictions)\u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 143\u001b[39m, in \u001b[36mCNN.train\u001b[39m\u001b[34m(self, train_images, train_labels, epochs, batch_size, learning_rate)\u001b[39m\n\u001b[32m    140\u001b[39m     dY[label] = -\u001b[32m1\u001b[39m / output[label]\n\u001b[32m    142\u001b[39m     \u001b[38;5;66;03m# Backward pass\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m143\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdY\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    145\u001b[39m avg_batch_loss = batch_loss / (end_idx - batch_idx)\n\u001b[32m    146\u001b[39m total_loss += avg_batch_loss\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 64\u001b[39m, in \u001b[36mCNN.backward\u001b[39m\u001b[34m(self, dY, learning_rate)\u001b[39m\n\u001b[32m     58\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     59\u001b[39m \u001b[33;03mBackward pass through the CNN\u001b[39;00m\n\u001b[32m     60\u001b[39m \u001b[33;03mdY: gradient of loss with respect to softmax output\u001b[39;00m\n\u001b[32m     61\u001b[39m \u001b[33;03mlearning_rate: learning rate for weight updates\u001b[39;00m\n\u001b[32m     62\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     63\u001b[39m \u001b[38;5;66;03m# Softmax backward\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m64\u001b[39m dY = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mlayers\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m8\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbackprop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdY\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     66\u001b[39m \u001b[38;5;66;03m# Dropout layer 2 backward\u001b[39;00m\n\u001b[32m     67\u001b[39m dY = \u001b[38;5;28mself\u001b[39m.layers[\u001b[32m7\u001b[39m].backward(dY)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\ZB\\Code\\Python\\CNN-from-strach\\softmax.py:35\u001b[39m, in \u001b[36msoftMax.backprop\u001b[39m\u001b[34m(self, dE_dY, alpha)\u001b[39m\n\u001b[32m     33\u001b[39m \u001b[38;5;66;03m# Compute gradients with respect to output (Z)\u001b[39;00m\n\u001b[32m     34\u001b[39m dY_dZ = -z_exp[i]*z_exp / (S**\u001b[32m2\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m35\u001b[39m \u001b[43mdY_dZ\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m = z_exp[i]*(S - z_exp) / (S**\u001b[32m2\u001b[39m)\n\u001b[32m     37\u001b[39m dE_dZ = gradient * dY_dZ \n\u001b[32m     39\u001b[39m \u001b[38;5;66;03m# Gradients of totals against weights/biases/input\u001b[39;00m\n",
+      "\u001b[31mValueError\u001b[39m: setting an array element with a sequence."
      ]
     }
    ],
